--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,16 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
+  <script src="js/idb.js"></script>
+  <script type="text/javascript">
+    (function() {
+      if('serviceworker' in navigator) {
+        navigator.serviceWorker
+          .register('./service-worker.js')
+          .then(()=> console.log('Service worker registered successfully'))
+          .catch(err => console.log('service worker registration failed', err));
+      }
+    })();
+  </script>
 </body>
 </html>
