--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   <script src="js/idb.js"></script>
   <script type="text/javascript">
     (function() {
-      if('serviceworker' in navigator) {
+      if('serviceWorker' in navigator) {
         navigator.serviceWorker
           .register('./service-worker.js')
           .then(()=> console.log('Service worker registered successfully'))
